CloudAlpacas/salesforce/main/default/objects/Benefits__c/Benefits__c.object-meta.xml
<CustomObject>
    <description>팬에게 발급된 쿠폰, 할인, 선예매권 등의 개인화 혜택을 기록(Recommendation과 연결할 수 있으며, 별도 사용이력 오브젝트 없이 상태와 일자 필드로 발급·사용·만료 과정을 관리)</description>
    <label>Benefits</label>
    <nameField>
        <displayFormat>BEN-{000000}</displayFormat>
        <label>Benefits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>