CloudAlpacas/salesforce/main/default/objects/Benefits__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>혜택을 사용할 수 있는 마지막 날짜를 기록</description>
    <inlineHelpText>혜택을 사용할 수 있는 마지막 날짜를 기록</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>