CloudAlpacas/salesforce/main/default/objects/Benefits__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>혜택을 발급받은 팬의 이름(Person Account)를 연결</description>
    <inlineHelpText>혜택을 발급받은 팬의 이름(Person Account)를 연결</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>